2006-12-12  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use ProjectFile.ResourceId
	for embedded resources.

2006-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Parser.cs: Why ParseMethodModies was set to false?
	  re-enabling. Fixes local variable code completion.

2006-11-14  Ankit Jain  <jankit@novell.com>

	* Gui/CodeGenerationPanel.cs (CodeGenerationPanelWidget.ctor): Add
	missing 'Module' option for compile target.

2006-11-13 David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* Parser/SharpDevelopTree/CompilationUnit.cs: returning Tag colection
	* Parser/Parser.cs: filling comments into compilation unit

2006-11-11 David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* Gui/CodeGenerationPanel.cs: fix for bug 79199
	
2006-09-21 Lluis Sanchez Gual  <lluis@novell.com> 

	* Parser/Resolver.cs: Fixed null check.

2006-09-12 Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* CSharpBindingCompilerManager.cs: Fixed win32 pathing issues, removed old mcs-specific compiler options (that weren't being used since [g]mcs options have been aligned with csc options), removed /bin/sh dependence.
	* Project/CSharpCompilerParameters.cs: Changed default compiler to mcs.

2006-09-12 Jacob Ilsø Christensen <jacobilsoe@gmail.com>
	
	* Parser/CSharpVisitor.cs: Fixed compile warning.
	* CSharpAmbience.cs: Track changes in Ambience.

2006-09-01 Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding/CSharpAmbience.cs: Avoid appending the class
	  name twice.

2006-08-07 Philip Turnbull <philip.turnbull@gmail.com>

	* CSharpBinding/CSharpBinding.addin.xml:
	Changed CSharpAmbience name from 'CSharp' to 'C#'.

	* CSharpBinding/CSharpAmbience.cs:
	Track API changes in Ambience.

2006-08-02 Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/Resolver.cs: Added null check.

2006-07-30 Matej Urbas <matej.urbas@gmail.com>

	* CSharpAmbience.cs: Fixed a curious null exception.